#410 Minor changes to activity dependency orderer